Changed planet icon and orbit distance. Add delay to planet entery.

--- a/Index.html
+++ b/Index.html
@@ -24,34 +24,34 @@
         <div class="orbitline orbit-3">
             <div class="orbit-3 rotating-orbit">
                 <div class="moon-orbit">
-                    <div class="moon"></div>
+                    <img class="moon" src="planets/moon2.svg" alt="moon">
                 </div>
-                <img class="3 earth planet" src="planets/earth.svg" alt="Earth">
+                <img class="3 earth planet" src="planets/earth2.svg" alt="Earth">
             </div>
         </div>
         <div class="orbitline orbit-4">
             <div class="orbit-4 rotating-orbit">
-                <img class="4 mars planet" src="planets/mars.png" alt="Venus">
+                <img class="4 mars planet" src="planets/mars.svg" alt="mars">
             </div>
         </div>
         <div class="orbitline orbit-5">
             <div class="orbit-5 rotating-orbit">
-                <img class="5 jupiter planet" src="planets/jupiter.png" alt="Venus">
+                <img class="5 jupiter planet" src="planets/jupiter.svg" alt="Venus">
             </div>
         </div>
         <div class="orbitline orbit-6">
             <div class="orbit-6 rotating-orbit">
-                <img class="6 saturn planet" src="planets/saturn.svg" alt="Venus">
+                <img class="6 saturn planet" src="planets/satrunpng.png" alt="Venus">
             </div>
         </div>
         <div class="orbitline orbit-7">
             <div class="orbit-7 rotating-orbit">
-                <img class="7 uranus planet" src="planets/uranus.png" alt="Venus">
+                <img class="7 uranus planet" src="planets/uranuspng.png" alt="Venus">
             </div>
         </div>
         <div class="orbitline orbit-8">
             <div class="orbit-8 rotating-orbit">
-                <img class="8 neptune planet" src="planets/neptune.png" alt="Venus">
+                <img class="8 neptune planet" src="planets/neptune.svg" alt="Venus">
             </div>
         </div>
     </div>
