Added dynamic tooltip. Changed folder structures for better oraganization. Fixed minor bugs.

--- a/Index.html
+++ b/Index.html
@@ -4,60 +4,126 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
 </head>
 
 <body>
-    <!-- First creat div for main-container to put all thing on it -->
+
     <div class="main-container">
+
         <div class="sunline sun"></div>
+
         <div class="orbitline orbit-1">
             <div class="orbit-1 rotating-orbit">
-                <img class="1 mercury planet" src="planets/mercury.svg" alt="Saturn">
+                <div class="tooltip tooltip-1">
+                    <img class="1 mercury planet" src="resources/img/mercury.svg" alt="mercury">
+                    <div class="tooltip-text js--text-1" dir="rtl">
+                        <p>نام</p>
+                        <p>سن</p>
+                        <p>سرعت</p>
+                    </div>
+                </div>
             </div>
         </div>
+
         <div class="orbitline orbit-2">
             <div class="orbit-2 rotating-orbit">
-                <img class="2 venus planet" src="planets/venus.svg" alt="Venus">
+                <div class="tooltip tooltip-2">
+                    <img class="2 venus planet" src="resources/img/venus.svg" alt="Venus">
+                    <div class="tooltip-text js--text-2" dir="rtl">
+                        <p>نام</p>
+                        <p>سن</p>
+                        <p>سرعت</p>
+                    </div>
+                </div>
             </div>
         </div>
+
         <div class="orbitline orbit-3">
             <div class="orbit-3 rotating-orbit">
-                <div class="moon-orbit">
-                    <img class="moon" src="planets/moon2.svg" alt="moon">
+                <div class="tooltip tooltip-3">
+                    <div class="moon-orbit">
+                        <img class="moon" src="resources/img/moon.svg" alt="moon">
+                    </div>
+                    <img class="3 earth planet" src="resources/img/earth.svg" alt="Earth">
+                    <div class="tooltip-text js--text-3" dir="rtl">
+                        <p>نام</p>
+                        <p>سن</p>
+                        <p>سرعت</p>
+                    </div>
                 </div>
-                <img class="3 earth planet" src="planets/earth2.svg" alt="Earth">
             </div>
         </div>
+
         <div class="orbitline orbit-4">
             <div class="orbit-4 rotating-orbit">
-                <img class="4 mars planet" src="planets/mars.svg" alt="mars">
+                <div class="tooltip tooltip-4">
+                    <img class="4 mars planet" src="resources/img/mars.svg" alt="mars">
+                    <div class="tooltip-text js--text-4" dir="rtl">
+                        <p>نام</p>
+                        <p>سن</p>
+                        <p>سرعت</p>
+                    </div>
+                </div>
             </div>
         </div>
+
         <div class="orbitline orbit-5">
             <div class="orbit-5 rotating-orbit">
-                <img class="5 jupiter planet" src="planets/jupiter.svg" alt="Venus">
+                <div class="tooltip tooltip-5">
+                    <img class="5 jupiter planet" src="resources/img/jupiter.svg" alt="Venus">
+                    <div class="tooltip-text js--text-5" dir="rtl">
+                        <p>نام</p>
+                        <p>سن</p>
+                        <p>سرعت</p>
+                    </div>
+                </div>
             </div>
         </div>
+
         <div class="orbitline orbit-6">
             <div class="orbit-6 rotating-orbit">
-                <img class="6 saturn planet" src="planets/satrunpng.png" alt="Venus">
+                <div class="tooltip tooltip-6">
+                    <img class="6 saturn planet" src="resources/img/saturn.png" alt="saturn">
+                    <div class="tooltip-text js--text-6" dir="rtl">
+                        <p>نام</p>
+                        <p>سن</p>
+                        <p>سرعت</p>
+                    </div>
+                </div>
             </div>
         </div>
+
         <div class="orbitline orbit-7">
             <div class="orbit-7 rotating-orbit">
-                <img class="7 uranus planet" src="planets/uranuspng.png" alt="Venus">
+                <div class="tooltip tooltip-7">
+                    <img class="7 uranus planet" src="resources/img/uranus.png" alt="uranus">
+                    <div class="tooltip-text js--text-7" dir="rtl">
+                        <p>نام</p>
+                        <p>سن</p>
+                        <p>سرعت</p>
+                    </div>
+                </div>
             </div>
         </div>
+
         <div class="orbitline orbit-8">
             <div class="orbit-8 rotating-orbit">
-                <img class="8 neptune planet" src="planets/neptune.svg" alt="Venus">
+                <div class="tooltip tooltip-8">
+                    <img class="8 neptune planet" src="resources/img/neptune.svg" alt="neptune">
+                    <div class="tooltip-text js--text-8" dir="rtl">
+                        <p>نام</p>
+                        <p>سن</p>
+                        <p>سرعت</p>
+                    </div>
+                </div>
             </div>
         </div>
+
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="jq.js" charset="utf-8"></script>
+    <script src="resources/js/jq.js" charset="utf-8"></script>
 </body>
 
 </html>
